crates/alder-parse/src/snapshots/alder_parse__query__tests__error_insert_into.snap
---
source: crates/alder-parse/src/query.rs
description: "query { insert users values ^rows }"
---
Query(
    Insert(
        Into(
            1,
            16,
        ),
        1,
        9,
    ),
    1,
    1,
)
