crates/alder-parse/src/snapshots/alder_parse__query__tests__error_insert_not_pinned.snap
---
source: crates/alder-parse/src/query.rs
description: "query { insert into users values { email, name } }"
---
Query(
    Insert(
        Pin(
            1,
            34,
        ),
        1,
        9,
    ),
    1,
    1,
)
