crates/alder-parse/src/snapshots/alder_parse__query__tests__error_insert_values.snap
---
source: crates/alder-parse/src/query.rs
description: "query { insert into users ^rows }"
---
Query(
    Insert(
        Values(
            1,
            27,
        ),
        1,
        9,
    ),
    1,
    1,
)
