crates/alder-parse/src/snapshots/alder_parse__query__tests__error_join_keyword.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users left posts on x }"
---
Query(
    Select(
        Join(
            Keyword(
                1,
                34,
            ),
            1,
            29,
        ),
        1,
        9,
    ),
    1,
    1,
)
