crates/alder-parse/src/snapshots/alder_parse__query__tests__error_join_missing_on.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users join posts }"
---
Query(
    Select(
        Join(
            On(
                1,
                40,
            ),
            1,
            29,
        ),
        1,
        9,
    ),
    1,
    1,
)
