crates/alder-parse/src/snapshots/alder_parse__query__tests__error_missing_from.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * users }"
---
Query(
    Select(
        From(
            1,
            18,
        ),
        1,
        9,
    ),
    1,
    1,
)
