crates/alder-parse/src/snapshots/alder_parse__query__tests__error_open.snap
---
source: crates/alder-parse/src/query.rs
description: query select * from users
---
Query(
    Open(
        1,
        7,
    ),
    1,
    1,
)
