crates/alder-parse/src/snapshots/alder_parse__query__tests__error_pin_bad_operand_propagates.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where users.id == ^007 }"
---
Query(
    Select(
        Where(
            Number(
                NoLeadingZero,
                1,
                49,
            ),
            1,
            35,
        ),
        1,
        9,
    ),
    1,
    1,
)
