crates/alder-parse/src/snapshots/alder_parse__query__tests__error_pin_no_operand.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where users.id == ^ }"
---
Query(
    Select(
        Where(
            Unary(
                1,
                48,
            ),
            1,
            35,
        ),
        1,
        9,
    ),
    1,
    1,
)
